[package]
name = "assignment-2-public-tests"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = {version = "0.3", features = ["full"] }
ntest = "0.7"
tempfile = "3.1"
env_logger = "*"
log = "*"
assignment-2-solution = { path = "../solution" }
uuid = { version = "0.8", features = ["v4"] }
hmac = "0.10"
sha2 = "0.9"
async-trait = "0.1"
async-channel = "1.5"
