[package]
name = "assignment-2-solution"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = {version = "0.3", features = ["full"] }
bytes = "0.5"
bincode = "1.3"
hmac = "0.10"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "*"
async-channel = "1.5"

[lib]
name = "assignment_2_solution"
path = "src/lib.rs"
